# Univeristy

./: README.md
Heart/: SponsoriPage.pptx
UBB-CS/Year1/BoschProject/BOSCH-Future-Mobility-Challenge/Startup_C/: CMakeLists.txt  README.md
UBB-CS/Year1/BoschProject/BOSCH-Future-Mobility-Challenge/Startup_C/include/: Message.hpp  ResponseHandler.hpp  SerialComManager.hpp
UBB-CS/Year1/BoschProject/BOSCH-Future-Mobility-Challenge/Startup_C/src/: Message.cpp  ResponseHandler.cpp  SerialComManager.cpp  SerialPortHandler.cpp  example1.cpp
UBB-CS/Year1/Sem1/Fundamentals of Programming/Labs/a11-12-dragoscrisan7/: CMakeLists.txt  CSVfile.cpp  CSVfile.h  Dog.h  UserService.cpp  UserService.h
UBB-CS/Year1/Sem1/Fundamentals of Programming/Labs/a3-4-dragoscrisan7/: Bakery_Repository.h  Bakery_repository.c  CMakeLists.txt  Dynamic_array.c  Operation.c  Operation.h  Services.c  Services.h  Test.c  Test.h  UI.c  Validators.c  Validators.h  main.c
UBB-CS/Year1/Sem1/Fundamentals of Programming/Labs/a5-6-dragoscrisan7/: CMakeLists.txt  Dog.h  Dynamic_array.h  Test.cpp  Test.h  UI.cpp  UI.h  UserRepo.cpp  UserRepo.h  UserService.h  main.cpp
UBB-CS/Year1/Sem1/Fundamentals of Programming/Labs/a8-9-dragoscrisan70/: AdoptedList.csv  CMakeLists.txt  Dog.cpp  Repository.cpp  Repository.h  Test.cpp  Ui.cpp  UserRepository.h  main.cpp
UBB-CS/Year1/Sem2/Object Oriented Programming/Exam_prep/CodeModels/e917-Patrulescu-Ronald-Sandrino/: CMakeLists.txt
UBB-CS/Year1/Sem2/Object Oriented Programming/Exam_prep/CodeModels/e917-Patrulescu-Ronald-Sandrino/data/: programmers.txt
UBB-CS/Year1/Sem2/Object Oriented Programming/Exam_prep/CodeModels/practice_for_exam/: CMakeLists.txt  Observer.h  Question.cpp  Service.cpp  main.cpp  presenter.h
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/PregatireDragos/: Block.cpp  Block.h  Building.cpp  CMakeLists.txt  House.cpp  Service.h  restored.txt
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/Seminar4_911/: CMakeLists.txt
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/Seminar4_911/Seminar4_911/: BMI.txt  MedicalAanalysis.cpp  Person.cpp  Seminar4_911.vcxproj.filters
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/TaskManager/: CMakeLists.txt  Repository.cpp  Repository.h  Services.cpp  Services.h  Task.cpp  Ui.h
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/a8-9-917-Topan-Oana-Maria/: CMakeLists.txt  main.cpp  recipes.txt  watchlist.csv  watchlist.html
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/a8-9-917-Topan-Oana-Maria/domain/: Duration.cpp  Duration.h  Recipe.cpp  Recipe.h
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/a8-9-917-Topan-Oana-Maria/lab_activity/: Comparator.cpp  Comparator.h  Comparator_ascending_by_likes.cpp  Comparator_ascending_by_likes.h  Comparator_descending_by_title.cpp  Comparator_descending_by_title.h
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/a8-9-917-Topan-Oana-Maria/repository/: DynamicVector.cpp  DynamicVector.h  Repository.cpp  Repository.h  Watch_list.cpp  Watch_list.h  Watch_list_csv.cpp  Watch_list_csv.h  Watch_list_html.cpp  Watch_list_html.h
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/a8-9-917-Topan-Oana-Maria/service/: Service.cpp  Service.h
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/a8-9-917-Topan-Oana-Maria/tests/: Tests.cpp  Tests.h
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/a8-9-917-Topan-Oana-Maria/user_interface/: User_interface.cpp  User_interface.h
UBB-CS/Year1/Sem2/Object Oriented Programming/Examples/a8-9-917-Topan-Oana-Maria/validation/: validator.cpp  validator.h
UBB-CS/Year1/Sem2/Object Oriented Programming/Seminars/Seminar2_911/: CMakeLists.txt  Seminar2_911.sln
UBB-CS/Year1/Sem2/Object Oriented Programming/Seminars/Seminar2_911/Seminar2_911/: DynamicVector.cpp  DynamicVector.h  Repository.cpp  Seminar2_911.vcxproj  Service.h
UBB-CS/Year1/Sem2/Object Oriented Programming/Seminars/Seminar3_Week1_stub/: CMakeLists.txt  Seminar3_Week1_stub.sln
UBB-CS/Year1/Sem2/Object Oriented Programming/Seminars/Seminar3_Week1_stub/Seminar3_Week1_stub/: Controller.h  DynamicVector.h  Repository.h  Seminar3_Week1_stub.vcxproj.filters  Tests.h  UI.cpp
UBB-CS/Year1/Sem2/Object_Oriented_Programming/Examples/Lecture5_demo/: CMakeLists.txt
UBB-CS/Year1/Sem2/Object_Oriented_Programming/Examples/Lecture5_demo/Lecture5_demo/: Animal.h  main.cpp
UBB-CS/Year1/Sem2/Object_Oriented_Programming/Examples/Lecture5_demo/Lecture5_demo/Debug/: Lecture5_demo.ilk  vc143.idb
UBB-CS/Year1/Sem2/Object_Oriented_Programming/Examples/Lecture5_demo/MultipleInheritance/: main.cpp
UBB-CS/Year1/Sem2/Object_Oriented_Programming/Examples/Lecture5_demo/MultipleInheritance/Debug/: MultipleInheritance.exe.recipe  vc143.idb
UBB-CS/Year1/Sem2/Object_Oriented_Programming/Examples/PregatireDragos2/: Appliance.h  CMakeLists.txt  DishWasher.cpp  Refrigerator.cpp  ui.cpp
UBB-CS/Year3/Sem1/FLCD/Projects/Lab5-8/FLCD-project/: CMakeLists.txt  main.cpp
UBB-CS/Year3/Sem1/FLCD/Projects/Lab5-8/FLCD-project/domain/: FA.h  Grammar.cpp  Grammar.h  Parser.cpp  Parser.h  Scanner.cpp  Scanner.h  SymbolTable.h
UBB-CS/Year3/Sem1/FLCD/Projects/Lab5-8/FLCD-project/elements/: FA.in
UBB-CS/Year3/Sem1/FLCD/Projects/Lab5-8/FLCD-project/in_files/: p1.txt  p2.txt
UBB-CS/Year3/Sem1/FLCD/Projects/Lab5-8/Parser/: CMakeLists.txt  LICENSE
UBB-CS/Year3/Sem1/Paralel and Distributed Programming/Projects/Lab7-9New/: CMakeLists.txt  code-review.csv  code-review.csv.html  code-review.csv.json
UBB-CS/Year3/Sem1/Paralel and Distributed Programming/Projects/Lab7-9New/SocketHandler/: SocketHandler.cpp
UBB-CS/Year3/Sem1/Paralel and Distributed Programming/Projects/TeamProject/: CMakeLists.txt  main.cpp
UBB-CS/Year3/Semester 1/Programare paralela si distributiva/Projects/Lab9/ServerHomework/: CMakeLists.txt
UBB-CS/Year3/Semester 1/Securitate Software/Projects/TeamProject/MyFtpServer/: CMakeLists.txt  ftp_server.cpp  main.cpp
UBB-CS/Year3/Semester 1/Securitate Software/Projects/TeamProject/ftp-client_1/: CMakeLists.txt
(+3905 files in other folders)
